@@ -1,6 +1,8 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+        - now properly merging distmeta fragments together without loss, using
+          new CPAN::Meta::Merge (Karen Etheridge)
 
 5.021     2014-10-20 22:43:52-04:00 America/New_York
         - improve authordeps' ability to cope with version requirements and
